# delta-debugging-example

./: README.md  delta-debugging.cabal  stack.yaml
app/: Main.hs
c_src/: chess.cpp  chess_wrapper.cpp
src/: Chess.hs  Divisible.hs  Reducible.hs
