name:                delta-debugging
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MichaelBurge/delta-debugging#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Burge
maintainer:          michaelburge@pobox.com
copyright:           2017 Michael Burge
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  c-sources:           c_src/chess_wrapper.cpp
  exposed-modules:     Chess
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , process
                     , split
  default-language:    Haskell2010

executable test-perft
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , delta-debugging
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MichaelBurge/delta-debugging
